something is broken

--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -307,4 +307,4 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = nm-applet
-
+exec-once = systemctl --user start hyprpolkitagent
