made screenshots possible on hyprland

--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -282,6 +282,8 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bind = $mainMod, F, fullscreen
 
+bind = ,Print, exec, grim -g "$(slurp -w 0)" - | wl-copy
+
 #bindl = $mainMod, subtract, exec, playerctl volume 0.05+
 #bindl = $mainMod, add, exec, playerctl volume 0.05-
 
