--- a/home/config/waybar/config.jsonc
+++ b/home/config/waybar/config.jsonc
@@ -1,57 +1,40 @@
 {
     "layer": "top",
-    "modules-left": ["hyprland/workspaces", "clock"],
-    "modules-center": ["mpris", "cava"],
-    "modules-right": ["pulseaudio","memory","temperature","cpu", "tray","clock"],
-    "mpris": {
-	"format": "▶ {dynamic}",
-	"format-paused": "⏸ {dynamic}",
-	"ignored-players": ["firefox"]
+    "group/performance": {
+	"orientation": "horizontal",
+	"modules": ["memory", "temperature", "cpu"]
     },
+    "group/clocktray": {
+	"orientation": "horizontal",
+	"modules": ["tray", "clock"]
+    },
+    "modules-left": ["group/clocktray", "hyprland/workspaces"],
+    //"modules-center": ["mpris", "cava"],
+    "modules-right": ["pulseaudio","group/performance"],
     "clock": {
-	"format": "    {:%b, %d — %H:%M}"
+	"format": " {:%b, %d — %H:%M} "
     },
     "temperature": {
 	"interval": 30,
 	"thermal-zone": 4,
-	"format": "CPU {temperatureC}°C     "
+	"format": " {temperatureC}°C   "
     },
     "memory": {
 	"interval": 30,
-	"format": "RAM {used:0.1f}/{total:0.1f}gb     "
+	"format": " {used:0.1f}/{total:0.1f}gb  "
     },
     "cpu": {
 	"interval": 30,
-	"format": "CPU {usage}%     "
+	"format": " {usage}%  "
+	
     },
     "pulseaudio": {
-	"format": "VOL {volume}%     "
+	"format": " {volume}%  "
     },
     "tray": {
 	"spacing": 4
-    }
+    },
 
-"cava": {
-//        "cava_config": "$XDG_CONFIG_HOME/cava/cava.conf",
-        "framerate": 30,
-        "autosens": 1,
-        "sensitivity": 100,
-        "bars": 14,
-        "lower_cutoff_freq": 50,
-        "higher_cutoff_freq": 10000,
-        "method": "pulse",
-        "source": "auto",
-        "stereo": true,
-        "reverse": false,
-        "bar_delimiter": 0,
-        "monstercat": false,
-        "waves": false,
-        "noise_reduction": 0.77,
-        "input_delay": 2,
-        "format-icons" : ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█" ],
-        "actions": {
-                   "on-click-right": "mode"
-                   }
-    }
+
 }
 
