--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -310,3 +310,7 @@ exec-once = hyprpaper
 exec-once = waybar
 exec-once = nm-applet
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = hypridle
+exec-once = dunst
+
+bind = $mainMod, L, exec, sleep 1 && hyprctl dispatch dpms toggle
