--- a/home/config/kitty/rose-pine-moon.conf
+++ b/home/config/kitty/rose-pine-moon.conf
@@ -4,9 +4,11 @@
 ## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-moon.conf
 ## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
+## e0def4
+
 foreground               #e0def4
 background               #232136
-selection_foreground     #e0def4
+selection_foreground     #8e8d9c
 selection_background     #44415a
 
 cursor                   #56526e
