--- a/home/config/waybar/config.jsonc
+++ b/home/config/waybar/config.jsonc
@@ -29,7 +29,8 @@
 	
     },
     "pulseaudio": {
-	"format": " {volume}%  "
+	"format": " {volume}%  ",
+    "format-muted": " {volume}%  "
     },
     "tray": {
 	"spacing": 4
