--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -281,6 +281,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bind = $mainMod, F, fullscreen
+bindl = SHIFT, KP_ADD, exec, playerctl volume 0.05-
+bindl = SHIFT, KP_SUBTRACT, exec, playerctl volume 0.05+
 
 bind = ,Print, exec, grim -g "$(slurp -w 0)" - | wl-copy
 
