--- a/home/config/hypr/hyprpaper.conf
+++ b/home/config/hypr/hyprpaper.conf
@@ -1,8 +1,5 @@
 ipc=on
-$wallpaper = /home/lucy/Pictures/celeste.png
-#preload=/home/lucy/Pictures/wall.png
-#wallpaper=DP-1,/home/lucy/Pictures/wall.png
-#wallpaper=DP-2,/home/lucy/Pictures/wall.png
+$wallpaper = /home/lucy/Pictures/grain.jpg
 preload=$wallpaper
 wallpaper=DP-1,$wallpaper
 wallpaper=DP-2,$wallpaper
