i didnt like it as much as i though i would i still like the unrounded corners though

--- a/home/config/cava/config
+++ b/home/config/cava/config
@@ -218,12 +218,12 @@
 # Or defined by hex code '#xxxxxx' (hex code must be within ''). User defined colors requires
 # a terminal that can change color definitions such as Gnome-terminal or rxvt.
 # default is to keep current terminal color
-; background = default
+background = default
 ; foreground = default
 
 # SDL and sdl_glsl only support hex code colors, these are the default:
 ; background = '#111111'
- foreground = '#b0b0b0'
+ foreground = '#ea9a97'
 
 
 # Gradient mode, only hex defined colors are supported,
