--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -77,8 +77,8 @@ general {
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = rgba(b0b0b0ff)
-    col.inactive_border = rgba(6d6d6daa)
+    col.active_border = rgba(ea9a97ff)
+    col.inactive_border = rgba(6e6a86)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -91,7 +91,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    #rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
