--- a/home/config/kitty/theme.conf
+++ b/home/config/kitty/theme.conf
@@ -4,55 +4,53 @@
 ## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-moon.conf
 ## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
-## e0def4
+foreground               #e0def4
+background               #232136
+selection_foreground     #e0def4
+selection_background     #44415a
 
-foreground               #e0e0e0
-background               #232323
-selection_foreground     #8e8e8e
-selection_background     #434343
+cursor                   #56526e
+cursor_text_color        #e0def4
 
-cursor                   #555555
-cursor_text_color        #e0e0e0
+url_color                #c4a7e7
 
-url_color                #b3b3b3
+active_tab_foreground    #e0def4
+active_tab_background    #393552
+inactive_tab_foreground  #6e6a86
+inactive_tab_background  #232136
 
-active_tab_foreground    #e0e0e0
-active_tab_background    #383838
-inactive_tab_foreground  #6d6d6d
-inactive_tab_background  #232323
-
-active_border_color      #858585
-inactive_border_color    #434343
+active_border_color      #3e8fb0
+inactive_border_color    #44415a
 
 # black
-color0   #383838
-color8   #6d6d6d
+color0   #393552
+color8   #6e6a86
 
 # red
-color1   #989898
-color9   #989898
+color1   #eb6f92
+color9   #eb6f92
 
 # green
-color2   #858585
-color10  #858585
+color2   #3e8fb0
+color10  #3e8fb0
 
 # yellow
-color3   #cbcbcb
-color11  #cbcbcb
+color3   #f6c177
+color11  #f6c177
 
 # blue
-color4   #c6c6c6
-color12  #c6c6c6
+color4   #9ccfd8
+color12  #9ccfd8
 
 # magenta
-color5   #b3b3b3
-color13  #b3b3b3
+color5   #c4a7e7
+color13  #c4a7e7
 
 # cyan
-color6   #b0b0b0
-color14  #b0b0b0
+color6   #ea9a97
+color14  #ea9a97
 
 # white
-color7   #e0e0e0
-color15  #e0e0e0
+color7   #e0def4
+color15  #e0def4
 
