why is it so difficult to find a wallpaper

--- a/home/config/hypr/hyprpaper.conf
+++ b/home/config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 ipc=on
-$wallpaper = /home/lucy/Pictures/grain.jpg
-preload=$wallpaper
-wallpaper=DP-1,$wallpaper
-wallpaper=DP-2,$wallpaper
+#$wallpaper = /home/lucy/Pictures/wall1.png
+#preload=$wallpaper
+#wallpaper=DP-1,$wallpaper
+#wallpaper=DP-2,$wallpaper
