--- a/home/config/waybar/config.jsonc
+++ b/home/config/waybar/config.jsonc
@@ -11,8 +11,29 @@
     "modules-left": ["group/clocktray", "hyprland/workspaces"],
     //"modules-center": ["mpris", "cava"],
     "modules-right": ["pulseaudio","group/performance"],
+    "modules-center": ["mpris"],
+    "mpris": {
+        "format": " {dynamic} ",
+        "interval": 1,
+        "ignore-players": ["firefox", "librewolf"]
+    },
     "clock": {
-	"format": " {:%b, %d — %H:%M} "
+	"format": " {:%H:%M} ",
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+        "calendar": {
+                    "mode"          : "year",
+                    "mode-mon-col"  : 3,
+                    "weeks-pos"     : "right",
+                    "on-scroll"     : 1,
+                    "format": {
+                              "months":     "<span color='#ffead3'><b>{}</b></span>",
+                              "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+                              "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+                              "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+                              "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                              }
+                    },
+
     },
     "temperature": {
 	"interval": 30,
@@ -38,4 +59,3 @@
 
 
 }
-
