--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -78,7 +78,7 @@ general {
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border = rgba(ea9a97ff)
-    col.inactive_border = rgba(6e6a86)
+    col.inactive_border = rgba(6e6a86ff)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
