--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -310,11 +310,11 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 exec-once = hyprpaper
-exec-once = hyprctl hyprpaper unload all
 exec-once = waybar
 exec-once = nm-applet
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec-once = dunst
+exec-once = set-wallpaper
 
 bind = $mainMod, L, exec, sleep 1 && hyprctl dispatch dpms toggle
