--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -315,6 +315,6 @@ exec-once = nm-applet
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec-once = dunst
-exec-once = set-wallpaper
+exec-once = fish ./set-wallpaper.fish
 
 bind = $mainMod, L, exec, sleep 1 && hyprctl dispatch dpms toggle
