--- a/home/config/gtk-3.0/settings.ini
+++ b/home/config/gtk-3.0/settings.ini
@@ -2,6 +2,7 @@
 gtk-application-prefer-dark-theme=true
 gtk-button-images=true
 gtk-cursor-theme-name=Vanilla-DMZ
+#gtk-cursor-theme-name=BreezeX-RoséPine
 gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
