--- a/home/config/gtk-4.0/settings.ini
+++ b/home/config/gtk-4.0/settings.ini
@@ -1,6 +1,7 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
 gtk-cursor-theme-name=Vanilla-DMZ
+#gtk-cursor-theme-name=BreezeX-RoséPine
 gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
@@ -11,3 +12,4 @@ gtk-modules=colorreload-gtk-module
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
 gtk-xft-dpi=98304
+
