perfection (at last (well see how long it lasts lol))

--- a/home/config/dunst/dunstrc.d/50-theme.conf
+++ b/home/config/dunst/dunstrc.d/50-theme.conf
@@ -1,6 +1,13 @@
 [global]
     width = 400
-    offset = 5x5
+
+    # origin = top-right
+    # offset = (20, 61)
+    origin = bottom-right
+    offset = (20,20)
+    follow = keyboard
+
+
     
     progress_bar_min_width = 380
     progress_bar_max_width = 380
@@ -9,8 +16,8 @@
     padding = 14
     horizontal_padding = 14
     frame_width = 2
-    gap_size = 5
-    font = "JetBrainsMono NFP 14"
+    gap_size = 10
+    font = "JetBrainsMono NFP 10"
 
     # icon_theme = "rose-pine-icons"
     # enable_recursive_icon_lookup = true
