--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -315,7 +315,7 @@ exec-once = waybar
 exec-once = nm-applet
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
-exec-once = dunst
+exec-once = dunst -conf ~/.config/dunst/dunstrc.d/50-theme.conf;
 exec-once = dconf write /org/gnome/desktop/interface/cursor-theme "'Vanilla-DMZ'"
 exec-once = hyprctl setcursor Vanilla-DMZ 24
 
