--- a/home/config/gtk-4.0/settings.ini
+++ b/home/config/gtk-4.0/settings.ini
@@ -7,9 +7,11 @@ gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-enable-event-sounds=false
 gtk-font-name=Noto Sans,  10
-gtk-icon-theme-name=breeze-dark
+#gtk-icon-theme-name=breeze-dark
+gtk-icon-theme-name=rose-pine-icons
 gtk-modules=colorreload-gtk-module
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
 gtk-xft-dpi=98304
+gtk-theme-name=rose-pine-gtk
 
