--- a/modules/hm/source-files-directory/home/config/hypr/hyprland.conf
+++ b/modules/hm/source-files-directory/home/config/hypr/hyprland.conf
@@ -318,6 +318,7 @@ exec-once = hypridle
 exec-once = dunst -conf ~/.config/dunst/dunstrc.d/50-theme.conf;
 exec-once = dconf write /org/gnome/desktop/interface/cursor-theme "'Vanilla-DMZ'"
 exec-once = hyprctl setcursor Vanilla-DMZ 24
+execr = hyprctl hyprpaper reload ,"/home/lucy/Pictures/Camera/2025-03-29/100_FUJI/DSCF0039.JPG"
 
 #exec-once = dconf write /org/gnome/desktop/interface/cursor-theme "'BreezeX-RoséPine'"
 #exec-once = hyprctl setcursor BreezeX-RoséPine 24
@@ -325,3 +326,5 @@ exec-once = hyprctl setcursor Vanilla-DMZ 24
 bind = $mainMod, L, exec, sleep 1 && hyprctl dispatch dpms toggle
 exec-once = wl-paste --watch cliphist store
 bind = $mainMod SHIFT, v, exec, cliphist list | wofi -S dmenu | cliphist decode | wl-copy 
+
+
