--- a/modules/hm/source-files-directory/home/config/kitty/theme.conf
+++ b/modules/hm/source-files-directory/home/config/kitty/theme.conf
@@ -9,7 +9,7 @@ background               #232136
 selection_foreground     #e0def4
 selection_background     #44415a
 
-cursor                   #56526e
+cursor                   #6e6a86
 cursor_text_color        #e0def4
 
 url_color                #c4a7e7
