soon to create laptop config

--- a/modules/hm/source-files-directory/home/config/hypr/hyprland.conf
+++ b/modules/hm/source-files-directory/home/config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ monitor = DP-1, 2560x1440@165, 2560x0, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = wezterm
 $fileManager = dolphin
 $menu = wofi --show drun
 
@@ -310,7 +310,6 @@ windowrulev2 = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-exec-once = hyprpaper
 exec-once = waybar
 exec-once = nm-applet
 exec-once = systemctl --user start hyprpolkitagent
@@ -318,7 +317,8 @@ exec-once = hypridle
 exec-once = dunst -conf ~/.config/dunst/dunstrc.d/50-theme.conf;
 exec-once = dconf write /org/gnome/desktop/interface/cursor-theme "'Vanilla-DMZ'"
 exec-once = hyprctl setcursor Vanilla-DMZ 24
-execr = hyprctl hyprpaper reload ,"/home/lucy/Pictures/Camera/2025-03-29/100_FUJI/DSCF0039.JPG"
+exec-once = hyprpaper
+exec-once = hyprctl hyprpaper reload ,"/home/lucy/Pictures/Camera/2025-03-29/100_FUJI/DSCF0149.JPG"
 
 #exec-once = dconf write /org/gnome/desktop/interface/cursor-theme "'BreezeX-RoséPine'"
 #exec-once = hyprctl setcursor BreezeX-RoséPine 24
