--- a/modules/hm/source-files-directory/home/config/kitty/theme.conf
+++ b/modules/hm/source-files-directory/home/config/kitty/theme.conf
@@ -4,53 +4,67 @@
 ## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-moon.conf
 ## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
+# text
 foreground               #e0def4
-background               #232136
+# base
+# background               #232136
+background #201d2f
+# text
 selection_foreground     #e0def4
-selection_background     #44415a
+# highlight low 
+selection_background #2a283e    
 
-cursor                   #6e6a86
-cursor_text_color        #e0def4
+# text
+cursor                   #ea9a97
+cursor_text_color        #232136
 
 url_color                #c4a7e7
 
+# text
 active_tab_foreground    #e0def4
-active_tab_background    #393552
+# base
+active_tab_background    #232136
+# muted
 inactive_tab_foreground  #6e6a86
-inactive_tab_background  #232136
+# overlay
+inactive_tab_background  #393552
 
+# pine
 active_border_color      #3e8fb0
+
+# highlight med
 inactive_border_color    #44415a
 
-# black
-color0   #393552
+# black / base
+color0   #232136
+# grey / muted
 color8   #6e6a86
 
-# red
+# red / love 
 color1   #eb6f92
 color9   #eb6f92
 
-# green
+# green / pine
 color2   #3e8fb0
 color10  #3e8fb0
 
-# yellow
+# yellow / gold 
 color3   #f6c177
 color11  #f6c177
 
-# blue
+# blue / foam
 color4   #9ccfd8
 color12  #9ccfd8
 
-# magenta
+# magenta / iris
 color5   #c4a7e7
 color13  #c4a7e7
 
-# cyan
+# cyan / rose
 color6   #ea9a97
 color14  #ea9a97
 
-# white
+# white / text
 color7   #e0def4
 color15  #e0def4
 
