--- a/modules/hm/source-files-directory/home/config/kitty/kitty.conf
+++ b/modules/hm/source-files-directory/home/config/kitty/kitty.conf
@@ -2,3 +2,7 @@ include theme.conf
 
 background_opacity 0.7
 background_blur 0
+
+font_family family='JetBrainsMono Nerd Font Mono' postscript_name=JetBrainsMonoNFM-ExtraLight
+
+update_check_interval 0
