--- a/modules/hm/source-files-directory/home/config/waybar/config.jsonc
+++ b/modules/hm/source-files-directory/home/config/waybar/config.jsonc
@@ -1,63 +1,16 @@
 {
     "layer": "top",
-    "group/performance": {
-	"orientation": "horizontal",
-	"modules": ["memory", "temperature", "cpu"]
-    },
-    "group/clocktray": {
-	"orientation": "horizontal",
-	"modules": ["tray", "clock"]
-    },
-    "modules-left": ["group/clocktray", "hyprland/workspaces"],
-    //"modules-center": ["mpris", "cava"],
-    "modules-right": ["pulseaudio","group/performance"],
-    "modules-center": ["mpris"],
-    "mpris": {
-        "format": "{dynamic}",
-        "interval": 1,
-        "ignore-players": ["firefox", "librewolf"],
-        "dynamic-len": 200,
-        "dynamic-importance-order": ["title", "position", "length", "album", "artist"]
+    "modules-center": ["clock", "niri/workspaces", "pulseaudio"],
+
+    "pulseaudio": {
+        "format": "󰕾 {volume}%"
     },
     "clock": {
-	"format": "{:%H:%M}",
-    "tooltip-format": "<tt><small>{calendar}</small></tt>",
-        "calendar": {
-                    "mode"          : "year",
-                    "mode-mon-col"  : 3,
-                    "weeks-pos"     : "right",
-                    "on-scroll"     : 1,
-                    "format": {
-                              "months":     "<span color='#ffead3'><b>{}</b></span>",
-                              "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-                              "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-                              "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-                              "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
-                              }
-                    },
-
+        "interval": 1,
+        "format": "󰥔 {:%H:%M}",
+        "tooltip-format": "{:%H:%M:%S, %Y-%m-%d}"
     },
-    "temperature": {
-	"interval": 30,
-	"thermal-zone": 4,
-	"format": "{temperatureC}°C  "
-    },
-    "memory": {
-	"interval": 30,
-	"format": "{used:0.1f}/{total:0.1f}gb "
-    },
-    "cpu": {
-	"interval": 30,
-	"format": "{usage}% "
-	
-    },
-    "pulseaudio": {
-	"format": "{volume}% ",
-    "format-muted": "{volume}% "
-    },
-    "tray": {
-	"spacing": 14
-    },
-
-
+    "niri/workspaces": {
+        "disable-click": true
+    }
 }
